Refactor all string scalars to new function registry